--- a/config/zones/BE.yaml
+++ b/config/zones/BE.yaml
@@ -553,6 +553,7 @@ fallbackZoneMixes:
         solar: 0.10308608811761544
         unknown: 0.055460468391665484
         wind: 0.17896151273177904
+has_day_ahead_price_license: True
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
