--- a/config/zones/ES-CE.yaml
+++ b/config/zones/ES-CE.yaml
@@ -84,6 +84,7 @@ fallbackZoneMixes:
         solar: 0.0
         unknown: 0.0
         wind: 0.0
+has_day_ahead_price_license: True
 parsers:
   consumption: ES.fetch_consumption
   production: ES.fetch_production
