--- a/config/zones/ES-CN-TE.yaml
+++ b/config/zones/ES-CN-TE.yaml
@@ -293,6 +293,7 @@ fallbackZoneMixes:
         solar: 0.04704794606775687
         unknown: 0.0
         wind: 0.1431409807238982
+has_day_ahead_price_license: True
 parsers:
   consumption: ES.fetch_consumption
   production: ES.fetch_production
