--- a/config/zones/ES-IB-MA.yaml
+++ b/config/zones/ES-IB-MA.yaml
@@ -280,6 +280,7 @@ fallbackZoneMixes:
         solar: 0.1366875017345735
         unknown: 0.010697864190356308
         wind: 0.06758167342075513
+has_day_ahead_price_license: True
 parsers:
   consumption: ES.fetch_consumption
   production: ES.fetch_production
