--- a/config/zones/ES.yaml
+++ b/config/zones/ES.yaml
@@ -581,6 +581,7 @@ fallbackZoneMixes:
         solar: 0.17259103779609025
         unknown: 0.0033878554452865988
         wind: 0.231907080406899
+has_day_ahead_price_license: True
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
