--- a/config/zones/PL.yaml
+++ b/config/zones/PL.yaml
@@ -576,6 +576,7 @@ fallbackZoneMixes:
         solar: 0.10543720753977064
         unknown: 0.021165400293021545
         wind: 0.15788617303391778
+has_day_ahead_price_license: True
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
