--- a/config/zones/SE-SE1.yaml
+++ b/config/zones/SE-SE1.yaml
@@ -326,6 +326,7 @@ fallbackZoneMixes:
         solar: 0.0009392238205526635
         unknown: 0.006938947891641582
         wind: 0.30592955546892997
+has_day_ahead_price_license: True
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
