--- a/config/zones/ES-CN-IG.yaml
+++ b/config/zones/ES-CN-IG.yaml
@@ -295,6 +295,7 @@ fallbackZoneMixes:
         solar: 0.0
         unknown: 0.0
         wind: 0.10116250460286508
+has_day_ahead_price_license: True
 parsers:
   consumption: ES.fetch_consumption
   production: ES.fetch_production
