--- a/config/zones/ES-CN-LP.yaml
+++ b/config/zones/ES-CN-LP.yaml
@@ -293,6 +293,7 @@ fallbackZoneMixes:
         solar: 0.018142231715055784
         unknown: 0.0
         wind: 0.0686308771428057
+has_day_ahead_price_license: True
 parsers:
   consumption: ES.fetch_consumption
   production: ES.fetch_production
