--- a/config/zones/ES-IB-FO.yaml
+++ b/config/zones/ES-IB-FO.yaml
@@ -251,6 +251,7 @@ fallbackZoneMixes:
         solar: 0.13720299574021036
         unknown: 0.006784750754949078
         wind: 0.037652333529152336
+has_day_ahead_price_license: True
 parsers:
   consumption: ES.fetch_consumption
   production: ES.fetch_production
