--- a/config/zones/FI.yaml
+++ b/config/zones/FI.yaml
@@ -449,6 +449,7 @@ fallbackZoneMixes:
         solar: 0.015558684526736201
         unknown: 0.02072893283843738
         wind: 0.24054849102643136
+has_day_ahead_price_license: True
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
