--- a/config/zones/LV.yaml
+++ b/config/zones/LV.yaml
@@ -473,6 +473,7 @@ fallbackZoneMixes:
         solar: 0.05284467820377226
         unknown: 0.056288524620116846
         wind: 0.14035237273662302
+has_day_ahead_price_license: True
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
