--- a/config/zones/NL.yaml
+++ b/config/zones/NL.yaml
@@ -527,6 +527,7 @@ fallbackZoneMixes:
         solar: 0.1855771978122889
         unknown: 0.01600895762532292
         wind: 0.275490914569801
+has_day_ahead_price_license: True
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
