--- a/config/zones/NO-NO1.yaml
+++ b/config/zones/NO-NO1.yaml
@@ -360,6 +360,7 @@ fallbackZoneMixes:
         solar: 0.0033313057652980278
         unknown: 0.004530321106530987
         wind: 0.08058754580014128
+has_day_ahead_price_license: True
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
