--- a/config/zones/PT-MA.yaml
+++ b/config/zones/PT-MA.yaml
@@ -76,6 +76,7 @@ emissionFactors:
       source: UNECE 2022, WindEurope "Wind energy in Europe, 2021 Statistics and the
         outlook for 2022-2026" Wind Europe Proceedings (2021)
       value: 12.62
+has_day_ahead_price_license: True
 region: Europe
 sources:
   EU-ETS, ENTSO-E 2021:
