--- a/config/zones/SE-SE2.yaml
+++ b/config/zones/SE-SE2.yaml
@@ -412,6 +412,7 @@ fallbackZoneMixes:
         solar: 0.0013529000025004657
         unknown: 0.014809349860570501
         wind: 0.30866761246294394
+has_day_ahead_price_license: True
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
