--- a/config/zones/SE-SE3.yaml
+++ b/config/zones/SE-SE3.yaml
@@ -419,6 +419,7 @@ fallbackZoneMixes:
         solar: 0.01062997963303864
         unknown: 0.03717101809816512
         wind: 0.2021775270304475
+has_day_ahead_price_license: True
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
